Changes in Shorewall 4.4.0-Beta2

1)  The 'find_first_interface_address()' and
    'find_first_interface_address_if_any()' functions have been restored to
    lib.base.

2)  Integerize r2q before inserting it into 'tc qdisc add root'
    command.

3)  Remove '-h' from the help text for install.sh in Shorewall and
    Shorewall6.

4)  Delete the 'continue' file from the Shorewall package.

Changes in Shorewall 4.4.0-Beta1

1)  Correct typo in Shorewall6 two-interface sample shorewall.conf.

2)  Fix TOS mnemonic handling in /etc/shorewall/tcfilters.

Changes in Shorewall 4.3.12

1) Eliminate 'large quantum' warnings.

2) Add HFSC support.

3) Delete support for ipset binding. Jozsef has removed the capability
   from ipset.

4) Add TOS and LENGTH columns to tcfilters file.

5) Fix 'reset' command.

6) Fix 'findgw'.

7) Remove 'norfc1918' support.

Changes in Shorewall 4.3.11

1) Reduce the number of arguments passed in may cases.

2) Fix SCTP source port handling in tcfilters.

3) Add 'findgw' user exit.

4) Add macro.Trcrt

Changes in Shorewall 4.3.10

1) Fix handling of shared optional providers.

2) Add WIDE_TC_MARKS option.

3) Allow compile to STDOUT.

4) Fix handling of class IDs.

5) Deprecate use of an interface in the SOURCE column of
   /etc/shorewall/masq.

6) Fix handling of 'all' in the SOURCE of DNAT- rules.

7) Fix compile for export.

8) Optimize IPMARK.

9) Implement nested HTB classes.

10) Fix 'iprange' command.

11) Make traffic shaping work better with IPv6.

12) Externalize 'flow'.

13) Fix 'start' with AUTOMAKE=Yes

Changes in Shorewall 4.3.9

1) Logging rules now create separate chain.

2) Fix netmask genereation in tcfilters.

3) Allow Shorewall6 with kernel 2.6.24

4) Avoid 'Invalid BROADCAST address' errors.

5) Allow Shorewall6 on kernel 4.2.24:Shorewall/changelog.txt

6) Add IP, TC and IPSET options in shorewall.conf and shorewall6.conf.

7) Add IPMARK support

Changes in Shorewall 4.3.8

1) Apply Tuomo Soini's patch for USE_DEFAULT_RT.
