@@ -540,6 +540,20 @@ loc     eth2            -</programlisting>
                 url="../UPnP.html">http://www.shorewall.net/UPnP.html</ulink>.</para>
               </listitem>
             </varlistentry>
+
+            <varlistentry>
+              <term><emphasis role="bold">upnpclient</emphasis></term>
+
+              <listitem>
+                <para>This option is intended for laptop users who always run
+                Shorewall on their system yet need to run UPnP-enabled client
+                apps such as Transmission (BitTorrent client). The option
+                causes Shorewall to detect the default gateway through the
+                interface and to accept UDP packets from that gateway. Note
+                that, like all aspects of UPnP, this is a security hole so use
+                this option at your own risk. </para>
+              </listitem>
+            </varlistentry>
           </variablelist>
         </listitem>
       </varlistentry>
