@@ -130,7 +130,15 @@ None.
                 N E W   F E A T U R E S   I N   4 . 4 . 0 Beta 2
 ----------------------------------------------------------------------------
 
-None.
+1)  A 'upnpclient' option has been added to
+    /etc/shorewall/interfaces. This option is intended for laptop users
+    who always run Shorewall on their system yet need to run
+    UPnP-enabled client apps such as Transmission (BitTorrent client).
+
+    The option causes Shorewall to detect the default gateway through
+    the interface and to accept UDP packets from that gateway. Note
+    that, like all aspects of UPnP, this is a security hole so use this
+    option at your own risk.
 
 ----------------------------------------------------------------------------
                  N E W   F E A T U R E S   IN   4 . 4
