@@ -12,6 +12,8 @@ Changes in Shorewall 4.4.0-Beta2
 
 4)  Delete the 'continue' file from the Shorewall package.
 
+5)  Add 'upnpclient' interface option.
+
 Changes in Shorewall 4.4.0-Beta1
 
 1)  Correct typo in Shorewall6 two-interface sample shorewall.conf.
